--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,8 +2,8 @@
 
 body {
   padding:50px;
-  font:22px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#111;
+  font:18px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:#000;
   font-weight:300;
 }
 
@@ -104,7 +104,7 @@ header {
   width:320px;
   float:left;
   position:fixed;
-  font-size:14px;
+  font-size:16px;
 }
 
 header ul {
@@ -146,6 +146,11 @@ header ul a {
 
 strong {
   color:#222;
+  font-weight:700;
+}
+
+a strong {
+  color:#777;
   font-weight:700;
 }
 
